{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 28,
  "lineage": "d4bb1fd9-a55c-4482-8c81-1ffac944f4b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:818631107817:internet-gateway/igw-03bab948dbf34ffc4",
            "id": "igw-03bab948dbf34ffc4",
            "owner_id": "818631107817",
            "tags": {
              "Name": "postal-vpc"
            },
            "tags_all": {
              "Name": "postal-vpc"
            },
            "vpc_id": "vpc-0f8217438beff9dd5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042fdc485f1f20b08",
            "original_route_table_id": "rtb-08ccbd29f332325bb",
            "route_table_id": "rtb-021abb3bcd76f2056",
            "vpc_id": "vpc-0f8217438beff9dd5"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:818631107817:route-table/rtb-021abb3bcd76f2056",
            "id": "rtb-021abb3bcd76f2056",
            "owner_id": "818631107817",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bab948dbf34ffc4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "postal-vpc"
            },
            "tags_all": {
              "Name": "postal-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8217438beff9dd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:818631107817:security-group/sg-0c6b135e284597495",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6b135e284597495",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "postal-internel-security-group",
            "name_prefix": "",
            "owner_id": "818631107817",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "postal-vpc"
            },
            "tags_all": {
              "Name": "postal-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8217438beff9dd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:818631107817:security-group/sg-0f36ea874fe6fc46b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f36ea874fe6fc46b",
            "ingress": [
              {
                "cidr_blocks": [
                  "70.95.118.178/32",
                  "91.219.212.195/32"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "postal-security-group",
            "name_prefix": "",
            "owner_id": "818631107817",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "postal-vpc"
            },
            "tags_all": {
              "Name": "postal-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8217438beff9dd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:818631107817:subnet/subnet-08965dfecf4d1e357",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08965dfecf4d1e357",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "818631107817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "postal-vpc"
            },
            "tags_all": {
              "Name": "postal-vpc"
            },
            "vpc_id": "vpc-0f8217438beff9dd5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:818631107817:vpc/vpc-0f8217438beff9dd5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0743bd8839366f336",
            "default_route_table_id": "rtb-08ccbd29f332325bb",
            "default_security_group_id": "sg-01385fe98f6a0b814",
            "dhcp_options_id": "dopt-0cd8e51a56c3b98b4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f8217438beff9dd5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ccbd29f332325bb",
            "owner_id": "818631107817",
            "tags": {
              "Name": "postal-vpc"
            },
            "tags_all": {
              "Name": "postal-vpc"
            }
          }
        }
      ]
    }
  ]
}